# linalg

./: .gitignore  .gitmodules  CMakeLists.txt
Include/: test.h
Linalg/: CMakeLists.txt
Linalg/Include/: Linalg.h  Linalg.hpp
Linalg/Source/: Linalg.cpp
Source/: main.cpp  test.cpp
